manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-custom-controller-service
spec:
  selector:
    k8s.custom.controller: k8s-custom-controller
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000 # your app listen to that (Dockerfile EXPOSE)
  type: NodePort
