manifest/demo-k8s-controller-awh.yaml
# full helm --dry-run
---
# Source: chart/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example2
---
# Source: chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-controller-helm-chart
  namespace: example2
spec:
  selector:
    k8s.custom.controller: k8s-custom-controller
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8000
  type: ClusterIP
---
# Source: chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-controller-helm-chart
  namespace: example2
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s.custom.controller: k8s-custom-controller
  template:
    metadata:
      labels:
        k8s.custom.controller: k8s-custom-controller
    spec:
      containers:
        - name: chart
          image: "manzilrahul/k8s-custom-controller:latest"
          volumeMounts:
            - name: webhook-certs1
              mountPath: /certs
              readOnly: true
      volumes:
        - name: webhook-certs1
          secret:
            secretName: "chart-tls"
---
# Source: chart/templates/cert-manager.yaml
# for running this you need to have cert-manager install on your cluster
# Installation: https://cert-manager.io/docs/installation/
---
# Source: chart/templates/validating-webhook-conf.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: webhook2
  annotations:
    cert-manager.io/inject-ca-from: "example2/webhook2-certificate"
webhooks:
  - name: "k8s-controller-helm-chart.example2.svc"
    admissionReviewVersions:
      - v1
    sideEffects: None
    timeoutSeconds: 30
    clientConfig:
      service:
        name: k8s-controller-helm-chart
        namespace: example2
        path: /validate
        port: 443
    rules:
      - apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE" ]
        resources: [ "deployments" ]
    failurePolicy: Fail
