manifest/k8s-controller-webhook.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example1
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: webhook1
  annotations:
    cert-manager.io/inject-ca-from: example1/webhook1-certificate
webhooks:
  - name: k8s-custom-controller-service.example1.svc
    admissionReviewVersions:
      - v1
    sideEffects: None
    timeoutSeconds: 30
    clientConfig:
      service:
        name: k8s-custom-controller-service
        namespace: example1
        path: /validate
        port: 443
    rules:
        - apiGroups: [ "apps" ]
          apiVersions: [ "v1" ]
          operations: [ "CREATE" ]
          resources: [ "deployments" ]
    failurePolicy: Fail

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-custom-controller
  namespace: example1
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s.custom.controller: k8s-custom-controller
  template:
    metadata:
      labels:
        k8s.custom.controller: k8s-custom-controller
    spec:
      containers:
        - name: k8s-controller
          image: manzilrahul/k8s-custom-controller:1.0.14
          volumeMounts:
            - name: webhook-certs
              mountPath: /certs
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: k8s-controller-tls
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-custom-controller-service
  namespace: example1
spec:
  selector:
    k8s.custom.controller: k8s-custom-controller
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8000
  type: ClusterIP
