manifest/webhook.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: k8s-custom-controller-service
webhooks:
  - name: k8s-custom-controller-service.default.svc
    admissionReviewVersions: ["v1"]
    sideEffects: None
    clientConfig:
      service:
        name: k8s-custom-controller-service
        namespace: default
        path: "/validate"
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURsVENDQW4yZ0F3SUJBZ0lVTlhEZlJiMGVVVkdYeG9rckx0ek1FeWMzWHRJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd05ERXlNREFHQTFVRUF3d3Bhemh6TFdOMWMzUnZiUzFqYjI1MGNtOXNiR1Z5TFhObGNuWnBZMlV1WkdWbQpZWFZzZEM1emRtTXdIaGNOTWpVd056STJNVGt4T0RRMFdoY05Nall3TnpJMk1Ua3hPRFEwV2pBME1USXdNQVlEClZRUUREQ2xyT0hNdFkzVnpkRzl0TFdOdmJuUnliMnhzWlhJdGMyVnlkbWxqWlM1a1pXWmhkV3gwTG5OMll6Q0MKQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFLUFdZQ2VTRlFORmp0VkZpVWRxRFFydApPcGpBMS9zaCt6K2VMMjF0 [...]
    rules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["deployments"]
    failurePolicy: Fail
