manifest/webhook1.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: k8s-custom-controller-webhook
webhooks:
  - name: k8s-custom-controller-service.default.svc
    clientConfig:
      service:
        name: k8s-custom-controller-service
        namespace: default
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ4ekNDQXR1Z0F3SUJBZ0lVY0tpWk5uVGVGMVJYZFBpcDJOSUE0djljdEtRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd05ERXlNREFHQTFVRUF3d3Bhemh6TFdOMWMzUnZiUzFqYjI1MGNtOXNiR1Z5TFhObGNuWnBZMlV1WkdWbQpZWFZzZEM1emRtTXdIaGNOTWpVd056STJNVGt5TkRFMldoY05Nall3TnpJMk1Ua3lOREUyV2pBME1USXdNQVlEClZRUUREQ2xyT0hNdFkzVnpkRzl0TFdOdmJuUnliMnhzWlhJdGMyVnlkbWxqWlM1a1pXWmhkV3gwTG5OMll6Q0MKQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNSko4SkhFOFhPZkJhYUN0cEd4dUNUagpudis0RlUxSDhx [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments"]
    namespaceSelector: {}
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    failurePolicy: Fail
